--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
     <li  id="logo">
         <img src="jotaro.jpg">
     </li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="product.html">Product</a></li>
-    <li><a href="home.html"  class="chosen">Home</a></li>
+    <li>
+        <a href="contact.html">Contact</a><a href="product.html">Product</a><a href="home.html" id="chosen">Home</a>
+    </li>
 </ul>
 <h1 id="title">CompanyX</h1>
 <div  class="mainpic">
