--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
     <li  id="logo">
         <img src="jotaro.jpg">
     </li>
-    <li><a href="contact.html"  class="chosen">Contact</a></li>
-    <li><a href="product.html">Product</a></li>
-    <li><a href="home.html">Home</a></li>
+    <li>
+        <a href="contact.html" id="chosen">Contact</a><a href="product.html">Product</a><a href="home.html">Home</a>
+    </li>
 </ul>
-<h1>
+<h2>
     Contact us
-</h1>
+</h2>
     <p>Visit us at</p>
     <p>CompanyX</p>
     <p>Green Dolphin Street Prison</p>
