--- a/product.html
+++ b/product.html
@@ -10,14 +10,15 @@
     <li  id="logo">
         <img src="jotaro.jpg">
     </li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="product.html"  class="chosen">Product</a></li>
-    <li><a href="home.html">Home</a></li>
+    <li>
+        <a href="contact.html">Contact</a><a href="product.html" id="chosen">Product</a><a href="home.html">Home</a>
+    </li>
 </ul>
-<div  class="mainpic">
+
+<div  class="productpic">
     <img src="jotaro.jpg">
 </div>
-<p class="main-text">
+<p class="product-text">
     Jolyne wakes up in the visiting room, everything covered in white goop.
     She realizes that there was never a secret passage and that she was never fighting Johngalli A.
     Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
@@ -27,47 +28,54 @@
 </p>
 <div class="products">
     <div class="product">
-        <p>
+        <h3>
             product1
-        </p>
-        <img src="jotaro.jpg">
+        </h3>
+        <div>
+            <img src="jotaro.jpg">
+        </div>
         <p>
-            Jolyne wakes up in the visiting room, everything covered in white goop.
-            She realizes that there was never a secret passage and that she was never fighting Johngalli A.
-            Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
-            Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
-            She tries to send a string over to Jotaro,but the string dissolves in the air.
-            She summons Stone Free, using it to break the table.
+    Jolyne wakes up in the visiting room, everything covered in white goop.
+    She realizes that there was never a secret passage and that she was never fighting Johngalli A.
+    Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
+    Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
+    She tries to send a string over to Jotaro,but the string dissolves in the air.
+    She summons Stone Free, using it to break the table.
         </p>
     </div>
     <div class="product">
-        <p>
+        <h3>
             product2
-        </p>
-        <img src="jotaro.jpg">
+        </h3>
+        <div>
+            <img src="jotaro.jpg">
+        </div>
         <p>
-            Jolyne wakes up in the visiting room, everything covered in white goop.
-            She realizes that there was never a secret passage and that she was never fighting Johngalli A.
-            Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
-            Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
-            She tries to send a string over to Jotaro,but the string dissolves in the air.
-            She summons Stone Free, using it to break the table.
+    Jolyne wakes up in the visiting room, everything covered in white goop.
+    She realizes that there was never a secret passage and that she was never fighting Johngalli A.
+    Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
+    Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
+    She tries to send a string over to Jotaro,but the string dissolves in the air.
+    She summons Stone Free, using it to break the table.
         </p>
     </div>
     <div class="product">
-        <p>
+        <h3>
             product3
-        </p>
-        <img src="jotaro.jpg">
-        <p>
-            Jolyne wakes up in the visiting room, everything covered in white goop.
-            She realizes that there was never a secret passage and that she was never fighting Johngalli A.
-            Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
-            Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
-            She tries to send a string over to Jotaro,but the string dissolves in the air.
-            She summons Stone Free, using it to break the table.
+        </h3>
+        <div>
+            <img src="jotaro.jpg">
+        </div>
+        <p> 
+    Jolyne wakes up in the visiting room, everything covered in white goop.
+    She realizes that there was never a secret passage and that she was never fighting Johngalli A.
+    Ever since Jotaro pointed out the lit cigarette, the two have been asleep, hallucinating.
+    Holding the bone given to her by Emporio had wounded her hand, allowing her to rouse.
+    She tries to send a string over to Jotaro,but the string dissolves in the air.
+    She summons Stone Free, using it to break the table.
         </p>
     </div>
 </div>
+
 </body>
 </html>
